latest commit background process and darkmode

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/next-gen-pemss-logo.svg" />
@@ -11,8 +11,9 @@
     <script src="https://accounts.google.com/gsi/client"></script> 
     <title>NextGen-Pemss</title>
   </head>
-  <body>
+  <body class="bg-gray-100 dark:bg-gray-200 text-gray-800 dark:text-gray-200 transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+
 </html>
